[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/Buttons/start_button_hover.png" type="Texture" id=1]
[ext_resource path="res://Core/GUIControl.gd" type="Script" id=2]
[ext_resource path="res://UI/Font/UIFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/Title.png" type="Texture" id=4]
[ext_resource path="res://UI/Buttons/start_button_long.png" type="Texture" id=5]
[ext_resource path="res://UI/Buttons/start_button_long_hover.png" type="Texture" id=6]
[ext_resource path="res://UI/Buttons/start_button.png" type="Texture" id=7]
[ext_resource path="res://UI/Main_Menu_Background.png" type="Texture" id=8]
[ext_resource path="res://UI/overlay.png" type="Texture" id=9]
[ext_resource path="res://UI/Menus/Options.jpg" type="Texture" id=10]

[node name="GUIControl" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 463.0
margin_bottom = 270.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="MainMenu"]
margin_left = 79.7643
margin_top = 20.2453
margin_right = 399.764
margin_bottom = 148.245
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonListTall" type="VBoxContainer" parent="MainMenu"]
visible = false
margin_left = 275.0
margin_top = 124.0
margin_right = 371.0
margin_bottom = 264.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="MainMenu/ButtonListTall"]
margin_right = 96.0
margin_bottom = 32.0
texture_normal = ExtResource( 7 )

[node name="Text" type="Label" parent="MainMenu/ButtonListTall/StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -0.314972
margin_top = 0.314972
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Character Select"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="MainMenu/ButtonListTall"]
margin_top = 36.0
margin_right = 96.0
margin_bottom = 68.0
texture_normal = ExtResource( 7 )

[node name="Text" type="Label" parent="MainMenu/ButtonListTall/OptionsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.1575
margin_top = -5.84251
margin_right = 27.8425
margin_bottom = 6.15749
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="TextureButton" parent="MainMenu/ButtonListTall"]
margin_top = 72.0
margin_right = 96.0
margin_bottom = 104.0
texture_normal = ExtResource( 7 )

[node name="Text" type="Label" parent="MainMenu/ButtonListTall/CreditsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.1575
margin_top = -5.84251
margin_right = 27.8425
margin_bottom = 6.15749
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Credits"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="MainMenu/ButtonListTall"]
margin_top = 108.0
margin_right = 96.0
margin_bottom = 140.0
texture_normal = ExtResource( 7 )

[node name="Text" type="Label" parent="MainMenu/ButtonListTall/ExitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -0.314972
margin_top = 0.314972
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonListFlat" type="VBoxContainer" parent="MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 190.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="CenterContainer" parent="MainMenu/ButtonListFlat"]
margin_right = 296.0
margin_bottom = 32.0

[node name="StartButton" type="TextureButton" parent="MainMenu/ButtonListFlat/TopBar"]
margin_left = 68.0
margin_right = 228.0
margin_bottom = 32.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Text" type="Label" parent="MainMenu/ButtonListFlat/TopBar/StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.1575
margin_top = -5.84251
margin_right = 63.8425
margin_bottom = 6.15749
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Character Select"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomBar" type="HBoxContainer" parent="MainMenu/ButtonListFlat"]
margin_top = 36.0
margin_right = 296.0
margin_bottom = 68.0
alignment = 1

[node name="OptionsButton" type="TextureButton" parent="MainMenu/ButtonListFlat/BottomBar"]
margin_right = 96.0
margin_bottom = 32.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 1 )

[node name="Text" type="Label" parent="MainMenu/ButtonListFlat/BottomBar/OptionsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.1575
margin_top = -5.84251
margin_right = 27.8425
margin_bottom = 6.15749
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="TextureButton" parent="MainMenu/ButtonListFlat/BottomBar"]
margin_left = 100.0
margin_right = 196.0
margin_bottom = 32.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 1 )

[node name="Text" type="Label" parent="MainMenu/ButtonListFlat/BottomBar/CreditsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.1575
margin_top = -5.84251
margin_right = 27.8425
margin_bottom = 6.15749
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Credits"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="MainMenu/ButtonListFlat/BottomBar"]
margin_left = 200.0
margin_right = 296.0
margin_bottom = 32.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 1 )

[node name="Text" type="Label" parent="MainMenu/ButtonListFlat/BottomBar/ExitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -0.314972
margin_top = 0.314972
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSelect" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempBackground" type="ColorRect" parent="CharacterSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.21166
margin_top = 0.104399
margin_right = 0.21167
margin_bottom = 0.104401
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.32549, 0.32549, 0.32549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="CharacterSelect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -51.5
margin_right = -32.0
margin_bottom = -19.5
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="CharacterSelect/StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="TextureRect" parent="OptionsMenu"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OptionsMenu/VBoxContainer"]
margin_right = 176.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 3 )
text = "You are out of Options"

[node name="CenterContainer" type="CenterContainer" parent="OptionsMenu/VBoxContainer"]
margin_top = 16.0
margin_right = 176.0
margin_bottom = 116.0

[node name="Options" type="TextureRect" parent="OptionsMenu/VBoxContainer/CenterContainer"]
margin_left = 38.0
margin_right = 138.0
margin_bottom = 100.0
texture = ExtResource( 10 )

[node name="Credits" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempBackground3" type="ColorRect" parent="Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.167046
margin_top = -0.0382158
margin_right = 0.167053
margin_bottom = -0.038208
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameGUI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TempBackground4" type="ColorRect" parent="GameGUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 0.629959
margin_right = 1.0
margin_bottom = 0.629944
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.886275, 0.0666667, 0.0666667, 0.45098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="PauseMenu"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="TextureButton" parent="PauseMenu/VBoxContainer"]
margin_right = 96.0
margin_bottom = 32.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="PauseMenu/VBoxContainer/ResumeButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="PauseMenu/VBoxContainer"]
margin_top = 36.0
margin_right = 96.0
margin_bottom = 68.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 1 )

[node name="Text" type="Label" parent="PauseMenu/VBoxContainer/OptionsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.1575
margin_top = -5.84251
margin_right = 27.8425
margin_bottom = 6.15749
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="PauseMenu/VBoxContainer"]
margin_top = 72.0
margin_right = 96.0
margin_bottom = 104.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 1 )

[node name="Text" type="Label" parent="PauseMenu/VBoxContainer/ExitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -0.314972
margin_top = 0.314972
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
